src/test/deca/syntax/valid/created/class_appel.deca
class A{

}
{
	A a = new A();
}
