src/test/deca/syntax/invalid/created/faux49.deca
class A{
	public int public = false;
}

{}
